--- a/src/styles/tailwind/components.scss
+++ b/src/styles/tailwind/components.scss
@@ -1,4 +1,7 @@
 @layer components {
+  .btn {
+    @apply animate-none;
+  }
   .hstack {
     @apply flex flex-wrap flex-row items-center gap-2;
   }
