--- a/src/styles/tailwind/base.scss
+++ b/src/styles/tailwind/base.scss
@@ -3,5 +3,18 @@
   body {
     @apply w-full max-w-full min-h-screen;
     @apply overflow-x-hidden;
+    @apply tracking-wider text-base;
+    @apply font-feature-jp;
+  }
+
+  @keyframes divFadeUp {
+    0% {
+      transform: translate3d(0, 40px, 0);
+      opacity: 0;
+    }
+    100% {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+    }
   }
 }
