--- a/src/styles/tailwind/utilities.scss
+++ b/src/styles/tailwind/utilities.scss
@@ -1,4 +1,17 @@
-@layer components {
+@layer utilities {
+  // ------------------------------
+  .vertical-lr {
+    writing-mode: vertical-lr;
+  }
+
+  .vertical-rl {
+    writing-mode: vertical-rl;
+  }
+  .font-feature-jp {
+    font-feature-settings: 'palt' 1, 'jp90';
+  }
+
+  // ------------------------------
   .br-pc {
     br {
       @apply hidden md:inline;
