--- a/src/styles/tailwind/base.scss
+++ b/src/styles/tailwind/base.scss
@@ -5,6 +5,7 @@
     @apply overflow-x-hidden;
     @apply tracking-wider text-base;
     @apply font-feature-jp;
+    @apply font-body;
   }
 
   @keyframes divFadeUp {
